--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
         <div class="messages">
             <!-- --TODO -- -->
-            <p> Párrafo de ejemplo</p>
+            <p> Vidas: <span id="lives"></span></p>
          </div>
     </div>
 
